public/v/release-3.1/_sources/repositories_and_packages/isaac_ros_nova/isaac_ros_data_replayer/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_nova> <isaac_ros_data_replayer>`

Overview
--------

The |package_name| package enables replaying sensor data recorded using the ``isaac_ros_data_recorder``
package. This package also enables reliable extraction of stereo cameras in different formats,
including depth using AI-based perception. Supported formats include MP4, PNG, and PFM. Stereo camera
frames are extracted in synchronized pairs while depth frames are aligned to the left stereo imager.

Quickstart
----------

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Download Quickstart Assets
^^^^^^^^^^^^^^^^^^^^^^^^^^

1. Download quickstart data from NGC:

   :ir_assets:`<isaac_ros_data_replayer> <quickstart.tar.gz>`

Build |package_name|
^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.. tabs::

   .. tab:: Binary Package

      1. Launch the Docker container using the ``run_dev.sh`` script:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
              ./scripts/run_dev.sh

      2. Install the prebuilt Debian package:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-humble-isaac-ros-data-replayer
            source /opt/ros/humble/setup.bash

      3. Install the required assets:

         .. code:: bash

            sudo apt-get install -y ros-humble-isaac-ros-ess-models-install
            source /opt/ros/humble/setup.bash

            ros2 run isaac_ros_ess_models_install install_ess_models.sh --eula

   .. tab:: Build from Source

      1. Clone this repository under ``${ISAAC_ROS_WS}/src``:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src && \
               git clone :ir_clone:`<isaac_ros_nova>`

      2. Launch the Docker container using the ``run_dev.sh`` script:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
               ./scripts/run_dev.sh

      3. Use ``rosdep`` to install the package's dependencies:

         :ir_apt:

         .. code:: bash

            rosdep install -i -r --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_nova/isaac_ros_data_replayer/ --rosdistro humble -y

      4. Install the required assets:

         .. code:: bash

            sudo apt-get install -y ros-humble-isaac-ros-ess-models-install
            source /opt/ros/humble/setup.bash

            ros2 run isaac_ros_ess_models_install install_ess_models.sh --eula

      5. Build the ROS package in the Docker container:

         .. code:: bash

            colcon build --symlink-install --packages-up-to isaac_ros_data_replayer
            source install/setup.bash

Run Launch File
^^^^^^^^^^^^^^^

.. code:: bash

   ros2 launch isaac_ros_data_replayer data_replayer.launch.py \
      rosbag:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_data_replayer/quickstart

Replay a single camera
^^^^^^^^^^^^^^^^^^^^^^
   .. code:: bash

      ros2 launch isaac_ros_data_replayer data_replayer.launch.py \
         rosbag:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_data_replayer/quickstart \
         enabled_stereo_cameras:=front_stereo_camera enabled_fisheye_cameras:=None enable_3d_lidar:=False

Visualize
^^^^^^^^^
1. Open a **new** terminal inside the Docker container:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
         ./scripts/run_dev.sh

2. Run RViz to visualize data:

   .. code:: bash

      rviz2

   .. figure::
       :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_nova/data_replayer_rviz.png>`
       :width: 800px
       :alt: data_replayer_rviz
       :align: center

Data Extraction
^^^^^^^^^^^^^^^

1. Run data extraction:

.. tabs::

   .. group-tab:: ESS

      .. code:: bash

         ros2 run isaac_ros_data_replayer data_extraction.py \
            --rosbag ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_data_replayer/quickstart \
            --camera front_stereo_camera --output ${ISAAC_ROS_WS} \
            --engine_file_path ${ISAAC_ROS_WS}/isaac_ros_assets/models/dnn_stereo_disparity/dnn_stereo_disparity_v4.0.0/ess.engine

   .. group-tab:: Light ESS

      .. code:: bash

         ros2 run isaac_ros_data_replayer data_extraction.py \
            --rosbag ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_data_replayer/quickstart \
            --camera front_stereo_camera --output ${ISAAC_ROS_WS} \
            --engine_file_path ${ISAAC_ROS_WS}/isaac_ros_assets/models/dnn_stereo_disparity/dnn_stereo_disparity_v4.0.0/light_ess.engine

2. Convert rosbag to MP4:

   .. code:: bash

      ros2 run isaac_ros_data_replayer camera_converter.py \
         -i  ${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_data_replayer/quickstart \
         -t /front_stereo_camera/left/image_compressed \
         -o ${ISAAC_ROS_WS}/front_stereo_camera_left.mp4

3. Convert MP4 to PNG:

   .. code:: bash

      mkdir ${ISAAC_ROS_WS}/front_stereo_camera_left && \
         ffmpeg -i ${ISAAC_ROS_WS}/front_stereo_camera_left.mp4 -vf fps=30 ${ISAAC_ROS_WS}/front_stereo_camera_left/%05d.png

Troubleshooting
---------------

Isaac ROS Troubleshooting
^^^^^^^^^^^^^^^^^^^^^^^^^

For solutions to problems with Isaac ROS, see :doc:`troubleshooting </troubleshooting/index>`.

Not all camera frames extracted from recording
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Data extraction extracts synchronized camera frames from a recording. If the number of frames
from the left and right camera are not equal, then some frames will be ignored to keep the left
and right cameras in sync.

API
----

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_data_replayer data_replayer.launch.py rosbag:=<rosbag>

ROS Launch Arguments
^^^^^^^^^^^^^^^^^^^^

=============================== ========================================================================================= ========================================================================================
ROS Launch Argument              Default Value                                                                            Description
=============================== ========================================================================================= ========================================================================================
``rosbag``                      None                                                                                      Path to recording.
``enabled_stereo_cameras``      ``front_stereo_camera``                                                                   Stereo cameras enabled for replay.
                                ``back_stereo_camera``
                                ``left_stereo_camera``
                                ``right_stereo_camera``
``enabled_fisheye_cameras``     ``front_fisheye_camera``                                                                  Fisheye cameras enabled for replay.
                                ``back_fisheye_camera``
                                ``left_fisheye_camera``
                                ``right_fisheye_camera``
``enable_3d_lidar``             ``True``                                                                                  Enable 3D lidar for replay.
``replay_loop``                 ``False``                                                                                 Loop replay.
``replay_rate``                 ``1.0``                                                                                   Extraction rate; 1.0 for real-time, <1.0 for sub-real-time, >1.0 for super-real-time.
``replay_delay``                None                                                                                      Delay to start replay.
``replay_additional_args``      ``--disable-keyboard-controls``                                                           Additional arguments for replay.
=============================== ========================================================================================= ========================================================================================

ROS Topics Published
^^^^^^^^^^^^^^^^^^^^

===================================================== =============================================================================================================================================================== ==================================================
ROS Topic                                             Interface                                                                                                                                                       Description
===================================================== =============================================================================================================================================================== ==================================================
``/rosout``                                           `rcl_interfaces/msg/Log <https://github.com/ros2/rcl_interfaces/blob/humble/rcl_interfaces/msg/Log.msg>`__                                                      Console logs.
``/tf``                                               `tf2_msgs/msg/TFMessage <https://github.com/ros2/geometry2/blob/humble/tf2_msgs/msg/TFMessage.msg>`__                                                           Movable transforms on the robot.
``/tf_static``                                        `tf2_msgs/msg/TFMessage <https://github.com/ros2/geometry2/blob/humble/tf2_msgs/msg/TFMessage.msg>`__                                                           Fixed transforms on the robot.
``/front_stereo_camera/left/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Front stereo camera left camera stream.
``/front_stereo_camera/left/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Front stereo camera left camera intrinsics.
``/front_stereo_camera/right/image_raw``              `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Front stereo camera right camera stream.
``/front_stereo_camera/right/camera_info``            `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Front stereo camera right camera intrinsics.
``/back_stereo_camera/left/image_raw``                `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Back stereo camera left camera stream.
``/back_stereo_camera/left/camera_info``              `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Back stereo camera left camera intrinsics.
``/back_stereo_camera/right/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Back stereo camera right camera stream.
``/back_stereo_camera/right/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Back stereo camera right camera intrinsics.
``/left_stereo_camera/left/image_raw``                `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Left stereo camera left camera stream.
``/left_stereo_camera/left/camera_info``              `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Left stereo camera left camera intrinsics.
``/left_stereo_camera/right/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Left stereo camera right camera stream.
``/left_stereo_camera/right/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Left stereo camera right camera intrinsics.
``/right_stereo_camera/left/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Right stereo camera left camera stream.
``/right_stereo_camera/left/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Right stereo camera left camera intrinsics.
``/right_stereo_camera/right/image_raw``              `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Right stereo camera right camera stream.
``/right_stereo_camera/right/camera_info``            `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Right stereo camera right camera intrinsics.
``/front_fisheye_camera/left/image_raw``              `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Front fisheye camera stream.
``/front_fisheye_camera/left/camera_info``            `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Front fisheye camera intrinsics.
``/back_fisheye_camera/left/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Back fisheye camera stream.
``/back_fisheye_camera/left/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Back fisheye camera intrinsics.
``/left_fisheye_camera/left/image_raw``               `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Left fisheye camera stream.
``/left_fisheye_camera/left/camera_info``             `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Left fisheye camera intrinsics.
``/right_fisheye_camera/left/image_raw``              `sensor_msgs/msg/Image <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Image.msg>`__                                                     Right fisheye camera stream.
``/right_fisheye_camera/left/camera_info``            `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__                                           Right fisheye camera intrinsics.
``/front_2d_lidar/scan``                              `sensor_msgs/msg/LaserScan <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/LaserScan.msg>`__                                             Front 2D lidar scan.
``/back_2d_lidar/scan``                               `sensor_msgs/msg/LaserScan <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/LaserScan.msg>`__                                             Back 2D lidar scan.
``/front_3d_lidar/lidar_points``                      `sensor_msgs/msg/PointCloud2 <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/PointCloud2.msg>`__                                         Front 3D lidar point cloud.
``/front_stereo_imu/imu``                             `sensor_msgs/msg/Imu <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Imu.msg>`__                                                         Front stereo camera inertial measurement unit.
``/chassis/imu``                                      `sensor_msgs/msg/Imu <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/Imu.msg>`__                                                         Chassis inertial measurement unit.
``/chassis/ticks``                                    `isaac_ros_nova_interfaces/msg/EncoderTicks <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_common/blob/main/isaac_ros_nova_interfaces/msg/EncoderTicks.msg>`__  Chassis encoder count.
``/chassis/odom``                                     `nav_msgs/msg/Odometry <https://github.com/ros2/common_interfaces/blob/humble/nav_msgs/msg/Odometry.msg>`__                                                     Chassis odometry.
``/chassis/battery_state``                            `sensor_msgs/msg/BatteryState <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/BatteryState.msg>`__                                       Chassis battery state.
===================================================== =============================================================================================================================================================== ==================================================

Usage
^^^^^

.. code:: bash

   ros2 run isaac_ros_data_replayer data_extraction.py --rosbag <rosbag> --camera <camera> --output <output>

ROS Run Arguments
^^^^^^^^^^^^^^^^^

========================== ============================================================================ ========================================================================================
ROS Run Argument           Default Value                                                                Description
========================== ============================================================================ ========================================================================================
``--rosbag``               None                                                                         Path to recording.
``--camera``               None                                                                         Camera to extract i.e. ``front_stereo_camera``.
``--output``               None                                                                         Directory to store extracted data.
``--output_width``         ``960``                                                                      Rectified image width.
``--output_height``        ``576``                                                                      Rectified image height.
``--min_disparity``        ``3.0``                                                                      Minimum disparity value for normalization.
``--max_disparity``        ``200.0``                                                                    Maximum disparity value for normalization.
``--threshold``            ``0.0``                                                                      ESS threshold.
``--engine_file_path``     ``${ISAAC_ROS_WS}/src/isaac_ros_dnn_stereo_depth/resources/ess.engine``      ESS engine file path.
========================== ============================================================================ ========================================================================================

ROS Topics Subscribed
^^^^^^^^^^^^^^^^^^^^^

====================================== ================================================================================================================================= ==========================
ROS Topic                              Interface                                                                                                                         Description
====================================== ================================================================================================================================= ==========================
``/<camera>/left/image_compressed``    `sensor_msgs/msg/CompressedImage <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CompressedImage.msg>`__   Left camera stream.
``/<camera>/left/camera_info``         `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__             Left camera intrinsics.
``/<camera>/right/image_compressed``   `sensor_msgs/msg/CompressedImage <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CompressedImage.msg>`__   Right camera stream.
``/<camera>/right/camera_info``        `sensor_msgs/msg/CameraInfo <https://github.com/ros2/common_interfaces/blob/humble/sensor_msgs/msg/CameraInfo.msg>`__             Right camera intrinsics.
====================================== ================================================================================================================================= ==========================


.. |package_name| replace:: ``isaac_ros_data_replayer``
